--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -303,7 +303,7 @@ g.append("text")
 .attr("fill","white")
 .attr("text-anchor","end")
 .style("font-size","14pt")
-.text("SALTISE-S4");
+.text("SALTISE/S4");
 
 }
 logo();
