memcached implemented for heaviest ajax view

--- a/peerinst/templates/peerinst/blinkquestion_detail.html
+++ b/peerinst/templates/peerinst/blinkquestion_detail.html
@@ -157,10 +157,12 @@ function getResults(response) {
 
 function checkRedirect(response) {
   function compare(response){
+    console.info(response);
     if (response != "error"){
       if (window.location.pathname != response) {
         location = response;
     }
+    // Need logic to clearInterval(checkURLID) if at the end of the script
   }
     return;
   }
