--- a/peerinst/templates/peerinst/teacher_blinks.html
+++ b/peerinst/templates/peerinst/teacher_blinks.html
@@ -20,11 +20,11 @@
 <h1>My Blink Questions</h1>
 <div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher' teacher.id %}">Back to My Account</a></div>
 <h2>Your current blinks</h2>
-{% if not teacher.blinks.all %}
+{% if not teacher.blinkquestion_set.all %}
 You do not have any blink questions.  You can select and modify an existing blink question from the list below or create a new one.
 {% endif %}
 <ol>
-{% for g in teacher.blinks.all %}
+{% for g in teacher.blinkquestion_set.all %}
  {% if g.current %}
   <li>{{g|safe}}
     <form style="display:inline" action="" method="post">
@@ -48,7 +48,7 @@ You do not have any blink questions.  You can select and modify an existing blin
 
 <h2>All your blinks</h2>
 <ol>
-{% for g in teacher.blinks.all %}
+{% for g in teacher.blinkquestion_set.all %}
   {% if not g.current %}
   <li>{{g|safe}}
     <form style="display:inline" action="" method="post">
