attempt at simplifying process of teacher making blink scripts and teacher account page

--- a/peerinst/templates/peerinst/teacher_detail.html
+++ b/peerinst/templates/peerinst/teacher_detail.html
@@ -48,7 +48,7 @@
   </ol>
 </div>
 
-<div>
+<!-- <div>
   <h2>Blink questions</h2>
   <div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher-blinks' teacher.id %}">Add/remove blink questions</a></div>
   {% if not object.blinkquestion_set.all %}
@@ -65,7 +65,7 @@
     {% endif %}
   {% endfor %}
   </ol>
-</div>
+</div> -->
 
 
 <div>
