--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -54,12 +54,62 @@
 {% endfor %}
 </ol>
 
-<h2>Available blinks</h2>
+<!-- <h2>Available blinks</h2>
 <div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher-blinks' teacher.id %}">Add/remove blink questions</a></div>
 {% if not teacher.blinkquestion_set.all %}
 You do not have any blink questions.
-{% endif %}
+{% endif %} -->
+
+
+<h2>All your blinks</h2>
 <ol>
+{% for g in teacher.blinkquestion_set.all %}
+  {% if not g.current %}
+  <li>{{g|safe}}
+    <form style="display:inline" action="" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="blink" value="{{g.pk}}" />
+        <input type="submit" value="add" />
+    </form>
+    {% if g.question.image %}
+    <div>
+      <img style="display:block;margin:auto;
+      padding-top:10pt;
+      padding-bottom:10pt;" src="{{ g.question.image.url }}"
+           alt="g.question.image_alt_text">
+    </div>
+    {% endif %}
+  </li>
+  {% endif %}
+{% endfor %}
+</ol>
+
+
+<h2>All questions in discipline</h2>
+<ol>
+{% for g in suggested_questions %}
+  <li>{{g.text|safe}}
+    <form action="" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="new_blink" value="{{g.pk}}" />
+        <input type="submit" value="add" />
+    </form>
+    {% if g.image %}
+    <div>
+      <img style="display:block;margin:auto;
+      padding-top:10pt;
+      padding-bottom:10pt;" src="{{ g.image.url }}"
+           alt="g.image_alt_text">
+    </div>
+    {% endif %}
+
+  </li>
+
+{% endfor %}
+</ol>
+
+
+<!-- <ol>
 {% for g in teacher.blinkquestion_set.all %}
   {% if g not in object.blinkquestions.all %}
   <li> {{g|safe|striptags}}
@@ -79,6 +129,6 @@ You do not have any blink questions.
   </li>
   {% endif %}
 {% endfor %}
-</ol>
+</ol> -->
 
 {% endblock %}
