--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -64,7 +64,7 @@ You do not have any blink questions.
 <h2>All your blinks</h2>
 <ol>
 {% for g in teacher.blinkquestion_set.all %}
-  {% if not g.current %}
+  {% if not g in object.blinkquestions.all %}
   <li>{{g|safe}}
     <form style="display:inline" action="" method="post">
         {% csrf_token %}
