--- a/peerinst/templates/peerinst/teacher_assignments.html
+++ b/peerinst/templates/peerinst/teacher_assignments.html
@@ -15,8 +15,10 @@
 
 <h1>My Assignments</h1>
 <div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher' teacher.id %}">Back to My Account</a></div>
+
 <h2>Create new</h2>
-new assignment form
+<div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'assignment-create' %}">Create a new assignment</a></div>
+
 <h2>Current</h2>
 Note: You can edit any assignment as long as it is only current for you.  Otherwise, you should clone it with a new name.
 {% if not teacher.groups.all %}
