--- a/peerinst/templates/peerinst/question_list.html
+++ b/peerinst/templates/peerinst/question_list.html
@@ -5,7 +5,7 @@
 <h1>Assignment: {{assignment.title}}</h1>
 <h2>{% trans 'Questions' %}</h2>
 {% if user.is_staff %}
-  <div class="admin-link"><a href="{% url 'admin_index_wrapper' %}">Click here to add or edit content</a></div>
+  <div class="admin-link"><a href="{% url 'assignment-update' assignment_id=assignment.identifier%}">Click here to change which questions are part of this assignment</a></div>
 {% endif %}
 
 <script>
