--- a/peerinst/templates/peerinst/blinkquestion_detail.html
+++ b/peerinst/templates/peerinst/blinkquestion_detail.html
@@ -196,6 +196,7 @@ function update_time(){
               return;
             }
             var checkURLID = window.setInterval(checkRedirect,1000);
+            // Consider timeout on checkURLID
           }
         }
         function blinkStatus() {
