--- a/peerinst/templates/peerinst/teacher_assignments.html
+++ b/peerinst/templates/peerinst/teacher_assignments.html
@@ -21,7 +21,7 @@
     {% csrf_token %}
     {{form.identifier.label_tag}} {{ form.identifier }} <span class="helptext">{{ form.identifier.help_text }}</span><br>
     {{form.title.label_tag}} {{ form.title }}<br>
-    <input type="submit" value="Save" />
+    <input type="submit" value="Create" />
 </form>
 
 <h2>Current</h2>
