--- a/peerinst/templates/peerinst/blinkassignment_form.html
+++ b/peerinst/templates/peerinst/blinkassignment_form.html
@@ -5,7 +5,7 @@
 <h2>Create a new blink script</h2>
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Save" />
+    <input type="submit" value="Create" />
 </form>
 
 {% endblock %}
