--- a/custom-settings/SALTISES4/templates/registration/password_reset_form.html
+++ b/custom-settings/SALTISES4/templates/registration/password_reset_form.html
@@ -6,7 +6,7 @@
     <h1>Reset Password</h1>
     <p>Enter your email address below, and we will send you an email with password reset link</p>
 
-    <form method="post" action="{% url 'password_reset_done' %}">
+    <form method="post" action="">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit email for password reset">
