build out rest of password reset

--- a/custom-settings/SALTISES4/templates/registration/password_reset_complete.html
+++ b/custom-settings/SALTISES4/templates/registration/password_reset_complete.html
@@ -1,20 +1,18 @@
-{% extends "peerinst/base_site.html" %}
+{% extends "peerinst/base.html" %}
+
 {% load i18n %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; {% trans 'Password reset' %}
-</div>
-{% endblock %}
+{% block body %}
 
-{% block title %}{{ title }}{% endblock %}
-{% block content_title %}<h1>{{ title }}</h1>{% endblock %}
+<h1>{{ title }}</h1>
 
 {% block content %}
 
 <p>{% trans "Your password has been set.  You may go ahead and log in now." %}</p>
 
-<p><a href="{{ login_url }}">{% trans 'Log in' %}</a></p>
+<br>
+<div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'login' %}">{% trans 'Log in' %}</a></div>
+
+{% endblock %}
 
 {% endblock %}
