--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -249,13 +249,18 @@ a {
 }
 
 
-/* login */
+/* login and password change */
+form[id*="password"] {
+  width:fit-content;
+  width:-moz-fit-content;
+  font-size: 10pt;
+}
 form[action*="login"] {
   width:fit-content;
   width:-moz-fit-content;
   font-size: 10pt;
 }
-#id_username, #id_password {
+#id_username, #id_password, #id_new_password1, #id_new_password2 {
   padding: 1px;
   margin: 0px;
   border-width: thin;
