--- a/custom-settings/SALTISES4/templates/registration/password_reset_form.html
+++ b/custom-settings/SALTISES4/templates/registration/password_reset_form.html
@@ -4,12 +4,12 @@
 
 <div>
     <h1>Reset Password</h1>
-    <p>Enter your email address below, and we will send you an email with password reset link</p>
+    <p>Enter your email address below and we will send you an email with password reset link.</p>
 
-    <form method="post" action="">
+    <form method="post" id="password_reset_email">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Submit email for password reset">
+        <input type="submit" value="Send email for password reset">
     </form>
 </div>
 
