--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -260,7 +260,7 @@ form[action*="login"] {
   width:-moz-fit-content;
   font-size: 10pt;
 }
-#id_username, #id_password, #id_new_password1, #id_new_password2 {
+#id_username, #id_password, #id_old_password, #id_new_password1, #id_new_password2 {
   padding: 1px;
   margin: 0px;
   border-width: thin;
