Set unvalidated new users to default inactive.  Add framework for TOS.

--- a/peerinst/templates/registration/login.html
+++ b/peerinst/templates/registration/login.html
@@ -25,7 +25,7 @@
 </form>
 
 {% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
+  <p>Your username and password didn't match or your account has not yet been activated. Please try again.</p>
 {% endif %}
 
 {% if next %}
