--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -265,7 +265,7 @@ form[action*="login"] {
   width:-moz-fit-content;
   font-size: 10pt;
 }
-#id_email, #id_username, #id_password, #id_old_password, #id_new_password1, #id_password1, #id_password2, #id_new_password2 {
+#id_url, #id_email, #id_username, #id_password, #id_old_password, #id_new_password1, #id_password1, #id_password2, #id_new_password2 {
   padding: 1px;
   margin: 0px;
   border-width: thin;
